{
  "sourceLanguage" : "fr",
  "strings" : {
    "" : {

    },
    "Cancel" : {

    },
    "Moc: %@" : {

    },
    "TX_0001" : {
      "comment" : "author of article",
      "extractionState" : "manual",
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Par %@"
          }
        }
      }
    },
    "TX_0002" : {
      "comment" : "Il y a 10 minutes par ex",
      "extractionState" : "manual",
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Il y a %@ %@"
          }
        }
      }
    },
    "TX_0003" : {
      "extractionState" : "manual",
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "minutes"
          }
        }
      }
    },
    "TX_0004" : {
      "extractionState" : "manual",
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "heurs"
          }
        }
      }
    },
    "TX_0005" : {
      "comment" : "Découvrir l’article complet",
      "extractionState" : "manual",
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Découvrir l’article complet"
          }
        }
      }
    },
    "TX_0006" : {
      "extractionState" : "manual",
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Par "
          }
        }
      }
    },
    "TX_0007" : {
      "extractionState" : "manual",
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "%@ article(s)"
          }
        }
      }
    },
    "TX_0008" : {
      "extractionState" : "manual",
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Toute l’actualité en français"
          }
        }
      }
    },
    "TX_0009" : {
      "extractionState" : "manual",
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Loading . . . "
          }
        }
      }
    },
    "TX_0010" : {
      "extractionState" : "manual",
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Oups… il n’y a pas d’articles pour le moment !"
          }
        }
      }
    },
    "TX_0011" : {
      "extractionState" : "manual",
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Une erreur est survenue lors du chargement des articles."
          }
        }
      }
    },
    "TX_0012" : {
      "extractionState" : "manual",
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Essayez à nouveau"
          }
        }
      }
    },
    "TX_0013" : {
      "extractionState" : "manual",
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Titres à la une"
          }
        }
      }
    },
    "TX_0014" : {
      "extractionState" : "manual",
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Rechercher des actualités..."
          }
        }
      }
    },
    "TX_0015" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Rechercher"
          }
        }
      }
    },
    "TX_0016" : {
      "extractionState" : "manual",
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Titres à la une"
          }
        }
      }
    }
  },
  "version" : "1.1"
}